# algorithmic-trading-platform

./: CMakeLists.txt  README.md
include/: Logger.h  MarketDataHandler.h  NetworkLayer.h  OrderBook.h  RiskManager.h  Simulator.h  StrategyEngine.h
src/: Logger.cpp  MarketDataHandler.cpp  NetworkLayer.cpp  OrderBook.cpp  RiskManager.cpp  Simulator.cpp  StrategyEngine.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
